add cart, endopoints, adjust ui and env

--- a/samboni-payload/.env.example
+++ b/samboni-payload/.env.example
@@ -1,2 +1,9 @@
 DATABASE_URI=mongodb://127.0.0.1/your-database-name
 PAYLOAD_SECRET=YOUR_SECRET_HERE
+
+# Shopify Storefront API
+SHOPIFY_STORE_DOMAIN=your-store-name
+SHOPIFY_STOREFRONT_ACCESS_TOKEN=your-storefront-access-token
+
+# Frontend URL for CORS (in production, set this to your deployed frontend URL)
+FRONTEND_URL=https://your-frontend-domain.com
