--- a/samboni-payload/package.json
+++ b/samboni-payload/package.json
@@ -18,18 +18,18 @@
     "test:int": "cross-env NODE_OPTIONS=--no-deprecation vitest run --config ./vitest.config.mts"
   },
   "dependencies": {
+    "@payloadcms/db-mongodb": "3.67.0",
     "@payloadcms/next": "3.67.0",
     "@payloadcms/richtext-lexical": "3.67.0",
     "@payloadcms/ui": "3.67.0",
     "cross-env": "^7.0.3",
     "dotenv": "16.4.7",
     "graphql": "^16.8.1",
-    "next": "15.4.8",
+    "next": "16.1.6",
     "payload": "3.67.0",
     "react": "19.2.1",
     "react-dom": "19.2.1",
-    "sharp": "0.34.2",
-    "@payloadcms/db-mongodb": "3.67.0"
+    "sharp": "0.34.2"
   },
   "devDependencies": {
     "@playwright/test": "1.56.1",
